Fix accessibility contrast and heading order

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -131,7 +131,7 @@
 	}
 
 	&_decor {
-		color: #e6bdca;
+		color: #b56b7f;
 	}
 
 	&_decor-dark {
