--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1066,7 +1066,7 @@
 	}
 	// .image-card__bonus
 	&__bonus {
-		color: #e6bdca;
+		color: #ffffff;
 		font-family: $fontFamilyTitle;
 		font-weight: 600;
 		align-self: flex-end;
@@ -1096,7 +1096,7 @@
 	}
 	// .price-card__sessions
 	&__sessions {
-		color: rgba(100, 85, 103, 0.7);
+		color: #645567;
 		font-family: $fontFamily;
 		font-style: italic;
 		font-weight: 300;
@@ -1410,7 +1410,7 @@
 	}
 	// .form__caution
 	&__caution {
-		color: #96849a;
+		color: #645567;
 		font-weight: 300;
 		line-height: 1.3;
 		@include adaptiveValue("font-size", 18, 14);
